add mailhog & add forgot password entrypoint
