# app/Http/Controllers/Api/Account/Profile/ForgotPasswordController.php
@@ -1,0 +1,61 @@
+<?php
+
+namespace App\Http\Controllers\Api\Account\Profile;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Foundation\Auth\SendsPasswordResetEmails;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Password;
+use Illuminate\Support\Facades\Validator;
+
+class ForgotPasswordController extends Controller
+{
+    use SendsPasswordResetEmails;
+
+    public function __construct()
+    {
+        $this->middleware('guest');
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/profile/account/forgot-password",
+     *     description="User forgot password.",
+     *     tags={"Account"},
+     *     @OA\RequestBody(
+     *       required=true,
+     *       @OA\MediaType(
+     *           mediaType="application/json",
+     *           @OA\Schema(
+     *               type="object",
+     *               @OA\Property(
+     *                   property="email",
+     *                   type="string",
+     *                   format="email"
+     *               )
+     *           )
+     *        )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *     )
+     * )
+     */
+    public function forgot(Request $request)
+    {
+        $validator = Validator::make($request->all(), ['email' => 'required|email']);
+
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 422);
+        }
+
+        $response = $this->broker()->sendResetLink(
+            $this->credentials($request)
+        );
+
+        return $response == Password::RESET_LINK_SENT
+            ? response()->json(['success' => true, 'message' => 'Check your email.'])
+            : response()->json(['error' => 'Invalid email.'], 401);
+    }
+}
